<resources>
    <string name="app_name">ArticlesAndStories</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="open_articles_button_text">Open Articles</string>
    <string name="open_stories_button_text">Open Stories</string>
    <string name="open_visited_articles_and_stories_button_text">Open Visited Articles And Stories</string>
    <string name="articles_title">Articles</string>
    <string name="stories_title">Stories</string>
    <string name="favorites_title">Favorites</string>
    <string name="content_label">Content</string>
    <string name="article_label">Article</string>
    <string name="welcome_label">Welcome</string>
</resources>