<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:paddingHorizontal="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/articlesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/open_articles_button_text"/>

    <Button
        android:id="@+id/storiesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/open_stories_button_text"/>

    <Button
        android:id="@+id/visitedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/open_visited_articles_and_stories_button_text"/>

</LinearLayout>